crates/benday-core/tests/snapshots/corpus__case__err_timeunit_grouped.snap
---
source: crates/benday-core/tests/corpus.rs
expression: snapshot
---
ERROR (spec): `timeUnit` bars do not support a grouping `color` ("region") yet; drop `color`, or drop `timeUnit`
