crates/benday-core/tests/snapshots/corpus__case__err_timeunit_on_color.snap
---
source: crates/benday-core/tests/corpus.rs
expression: snapshot
---
ERROR (spec): `timeUnit` is only supported on encoding.x (it buckets time on the category axis); remove it from encoding.color
